# backgrounder

./: .background  .bgserver.py.swp  .gitignore  .local.vimrc  .serverd.py.swo  Cargo.toml  Makefile  README.md  TODO  backgroundconfig.py  backgrounder.py  bgclient.py  bgconf.py  bgimage.py  bgserver.py  bgservice.py  bgtypechecker.py  config.ini  imgur.py  pathutils.py  requirements.txt  save.out  tags  test.conf  tmp
.script/: .background  curbg  defaults  rmbg  savebg  set_bg.sh
imageparsers/: bluescreens.py  blueshots.py  google.py  imgur.py  reddit.py  reddit_api.py
img/: .background
lists/: catsncars  favorites  massive  massmovie  movies  working
online/: .background  massive  massive.bkp  minimal.txt  nebula  nebula.txtbkp  nebula2.txt  rome  tmp.img
script/: curbg  defaults  imgur_util  nextbg  rmbg  savebg  set_bg.sh
src/: Makefile  args.yaml  background.rs  bgconfig.rs  bkg.c  buf.c  buf.h  client.rs  config.mk  controller.rs  curbg  defaults  error.rs  fileparser.rs  img.c  img.h  imgur.rs  listparser.rs  log.c  main.rs  messenger.rs  parser.rs  player.rs  playlist.rs  rmbg  savebg  server.rs  set_bg.sh  tests.rs  uri.c  uri.h  worker.rs
src/img/: img.c  img.h  jpeg.c  jpeg.h  pixel.h  png.c  png.h
src/parsers/: file.rs  mod.rs
src/rpc/: Makefile  cmd.c  cmd.h  rpc.c  rpc.h
tests/: config1.test  imagelist  test.py
