[package]
name = "backgrounder-rs"
version = "0.1.0"
authors = ["spowell"]

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
dbus = "0.6.1"
dbus-macros = "0.2.3"
rand = "0.4.2"
url = "1.7.0"
reqwest = "0.8.5"
regex = "0.2.6"
serde = "1.0.27"
serde_json = "1.0.10"
serde_derive = "1.0.27"
config = "~0.1.0"
kuchiki = "0.7.0"
daemonize = "0.2.3"
time = "0.1.39"
image = "0.18.0"
nanomsg = "0.6.2"
imlib2 = { path = "../imlib2-rs" }
xwallpaper = { path = "../xwallpaper" }
